renewed for lab 2

--- a/lab1/makefile
+++ b/lab1/makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-Wall -g
 
-BINS= memory_shim test leakcount 
+BINS= memory_shim test leakcount sctracer
 
 
 all: $(BINS)
@@ -11,10 +11,13 @@ test: test.c
 
 leakcount: leakcount.c leakcount.h
 	$(CC) $(CFLAGS) -o leakcount leakcount.c leakcount.h
-
+	chmod +x leakcount
 
 memory_shim: memory_shim.c
 	$(CC) $(CFLAGS) -shared -fPIC memory_shim.c -o memory_shim.so -ldl
+
+sctracer: sctracer.c sctracer.h
+	$(CC) $(CFLAGS) -o sctracer sctracer.c sctracer.h
 
 clean:
 	$(RM) $(BINS)
